[package]
name = "rust-basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prusti-contracts = "0.1.2"
log = "0.4.17"
env_logger = "0.9.1"
once_cell = "1.16.0"
delegate = "0.8.0"
backtrace = "0.3.67"
serde = "1.0.138"
serde_derive = "1.0.103"