[package]
name = "rust-debugging-locks"
version = "0.5.2"
edition = "2021"

[dependencies]
log = "0.4.14"
backtrace = "0.3.67"
serde = "1.0.136"
serde_derive = "1.0.136"

[dev-dependencies]
env_logger = "0.9.0"
criterion = "0.4.0"

[[bench]]
# criterion
name = "stacktrace_benchmark"
harness = false

