[package]
name = "rust-debugging-locks"
version = "0.8.10"
edition = "2021"
description = "A library for debugging locks in Rust"
license = "MIT"

[dependencies]
log = "0.4.14"
backtrace = "0.3.67"
base58 = "0.2.0"
serde = "1.0.136"
serde_derive = "1.0.136"

[dev-dependencies]
tracing-subscriber = "0.3.18"
env_logger = "0.9.0"
criterion = "0.4.0"

[[bench]]
# criterion
name = "stacktrace_benchmark"
harness = false

[[bench]]
# criterion
name = "rwlock_wrapper_benchmark"
harness = false

